# banking_work

./: .gitignore  README.md  config.py  env.example  main.py  pyproject.toml  pytest.ini
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorator_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_reports_py.html  z_145eef247bfb46b6_services_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_views_py.html
results/: people_pass.json
src/: decorator.py  main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_conftest.py  test_decorator.py  test_reports.py  test_services.py  test_utils.py  test_views.py
