[project]
name = "banking-work"
version = "0.1.0"
description = ""
authors = [
    {name = "alexey_vedenkin",email = "alexey.vedenkin@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"

